# bitmap-renderer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: add_test.sh  regression.rs
tests/fixtures/: 127332.json  163284.json  2.json  258502.json  474712.json  677633.json  699412.json  75546.json  78319.json  802383.json  84534.json
